# wetlands

./: .gitignore  CHAT_FIX_SUMMARY.md  Dockerfile  README.md  explore.ipynb  pyproject.toml  pytest.ini  requirements.txt  start.sh  stop.sh  tasks.md
.github/: copilot-instructions.md
.roo/: mcp.json
app/: app.py  llm_proxy.py  system_prompt.txt  utils.py  variables.py
docs/: index.html  wetland-colormap.json
k8s/: README.md  configmap-nginx.yaml  deployment.yaml  ingress.yaml  secrets.yaml.example  service.yaml
llm_proxy/: .gitignore  Dockerfile  README.md  analyze_log_content.py  analyze_logs.py  analyze_tool_usage.py  config.json  configmap.yaml  cronjob-log-backup-README.md  cronjob-log-backup-rbac.yaml  cronjob-log-backup.yaml  debug.sh  deployment.yaml  ingress.yaml  llm_proxy.py  requirements.txt  secrets.yaml.example  service.yaml
local_proxy/: mcp_proxy.py
maplibre/: CHANGES_GPT_OSS.md  README.md  category_codes.csv  chat.css  chat.js  config.json  index.html  layer-config.json  map.js  marked.min.js  style.css  system-prompt.md  upload_config_to_s3.py
mcp/: README.md  benchmark_queries.py  config.json  create-secrets.sh  data-dictionary.md  idea.ipynb  llm.ipynb  mcp-server-deployment.yaml  mcp-server-ingress.yaml  mcp-server-service.yaml  remote-llm.ipynb  system-prompt.md  test_sse_connection.py
reports/: priorities.qmd  priority_hydrobasins.ipynb  priority_hydrobasins.md  priority_hydrobasins.qmd  priority_hydrobasins_all_au.csv  priority_hydrobasins_all_br.csv  priority_hydrobasins_all_ca.csv  priority_hydrobasins_all_cl.csv  (+14 more)
(+25 files in other folders)
