[project]
name = "wetlands"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "streamlit>=1.51.0",
]

[dependency-groups]
dev = [
    "langchain>=1.1.0",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-openai>=1.1.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
